--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         <a class="image fit"><img src="images/headshot.jpg" alt="" /></a>
                     </div>
                     <div class="col-9 col-12-small">
-                        <p>Hi! I'm a Computer Science graduate student at the University of Wisconsin-Madison with experience in game theory, graph theory, and algorithm design. I am eager to develop my skills further and contribute to innovative projects in these exciting fields!</p>
+                        <p>I’m an undergraduate student at Northwestern University, an HCI/visual-computing researcher focused on accessibility and XR. I build and study systems like a screen-reader-first LLM chat for blind users (bias/quality analysis at the sentence level) and a Unity VR simulation for offshore wind stakeholders, alongside practical tools like Netify for music-playlist migration. I’m interested in AR/VR interaction, human-AI collaboration, and evaluation methods that turn prototypes into usable, trustworthy tech.</p>
                     </div>
                 </div>
             </article>
