--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
+            list-style: none;
+            padding-left: 0;
+            margin-left: 0;
         }
 
         .button {
@@ -437,7 +440,7 @@
                         <a class="image fit"><img src="images/headshot.jpg" alt="" /></a>
                     </div>
                     <div class="col-9 col-12-small">
-                        <p>I’m an undergraduate student at Northwestern University, an HCI/visual-computing researcher focused on accessibility and XR. I build and study systems like a screen-reader-first LLM chat for blind users (bias/quality analysis at the sentence level) and a Unity VR simulation for offshore wind stakeholders, alongside practical tools like Netify for music-playlist migration. I’m interested in AR/VR interaction, human-AI collaboration, and evaluation methods that turn prototypes into usable, trustworthy tech.</p>
+                        <p>I’m an undergraduate student at Northwestern University. I’m interested in AR/VR interaction, human-AI collaboration, and evaluation methods that turn prototypes into usable, trustworthy tech.</p>
                     </div>
                 </div>
             </article>
@@ -532,7 +535,7 @@
                     <!-- Project 1: Netify -->
                     <header>
                         <h2>Netify — Playlist Migration from NetEase to Spotify</h2>
-                        <p class="research-meta">Timeline: May 2025 · Stack: Next.js 14 · TypeScript · Tailwind CSS · FastAPI (Python) · Spotify Web API · NetEase API · Vercel · Fly.io</p>
+                        <p class="research-meta"> Stack: Next.js 14 · TypeScript · Tailwind CSS · FastAPI (Python) · Spotify Web API · NetEase API · Vercel · Fly.io</p>
                     </header>
 
                     <p class="lead">Netify addresses music lock-in by reliably transferring entire NetEase Cloud Music playlists to Spotify. The app authenticates securely via <strong>OAuth 2.0 PKCE</strong>, fetches large playlists with pagination and fallbacks (handling the NetEase ~800-track limit), and uses a <em>fuzzy matching</em> pipeline (duration tolerance + artist normalization) to find the best Spotify tracks. A progress UI and a missing-tracks report make long transfers transparent. Since launch, Netify has helped <strong>50+ users migrate 10,000+ songs</strong>.</p>
@@ -542,7 +545,7 @@
                         <li><strong>Large-playlist handling:</strong> Robust pagination/chunking and graceful fallbacks for NetEase API limits (~800 tracks/playlist).</li>
                         <li><strong>Smart matching:</strong> RapidFuzz with duration tolerance and artist normalization cut mismatches by <strong>≈50%</strong> vs title-only.</li>
                         <li><strong>Full transfer:</strong> Creates Spotify playlists with tracks, name, and cover; progress bar + detailed missing-track report.</li>
-                        <li><strong>Deployable & fast:</strong> Next.js frontend on Vercel; FastAPI backend on Fly.io; bilingual UI (简体中文 / English).</li>
+                        <li><strong>Deployable & fast:</strong> Next.js frontend on Vercel; FastAPI backend on Fly.io; bilingual UI.</li>
                     </ul>
 
                     <p class="skills"><strong>Skills:</strong> Next.js (React), TypeScript, Tailwind CSS, FastAPI (Python), OAuth 2.0 PKCE, REST APIs, RapidFuzz, pagination & resilience patterns, cloud deployment (Vercel/Fly.io).</p>
@@ -564,7 +567,7 @@
                 <article>
                     <header>
                         <h2>Light — RPG Game Prototype</h2>
-                        <p class="research-meta">Timeline: Jan 2023 · Team: 5 · Engine: Unreal Engine 5</p>
+                        <p class="research-meta">Engine: Unreal Engine 5</p>
                     </header>
 
                     <p class="lead"><em>Light</em> is a vertical-slice RPG prototype exploring AI-driven enemies and light-based puzzle mechanics. In Agile sprints, our team built a playable loop that combines patrol/chase enemies with laser–mirror–sensor puzzles to test how systemic AI pressure and spatial reasoning affect player engagement. Internal playtests showed a <strong>~50% increase in engagement</strong> after iterating on puzzle clarity and combat pacing.</p>
