--- a/hobbies.html
+++ b/hobbies.html
@@ -39,7 +39,7 @@
         <div class="nav">
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">CV</a></li>
+                <li><a href="CV/YuyangWang_CV.pdf" target="_blank" rel="noopener">CV</a></li>
                 <li class="active"><a href="hobbies.html">Hobbies</a></li>
             </ul>
         </div>
