--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <!-- Main navigation links -->
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="CV/YuyangWang_CV.pdf" target="_blank" rel="noopener">CV</a></li>
                     <li><a href="hobbies.html">Hobbies</a></li>
                 </ul>
                                  <!-- Social media icons -->
